HtmlFrontend: page collapse regression fix

--- a/src/main/webapp/mj.css
+++ b/src/main/webapp/mj.css
@@ -137,7 +137,6 @@ li {
 .page {
 	position: relative;
 	border-bottom: 1px rgb(160,160,160) solid;
-	min-height: 10em;
 	width: 100%;
 }
 
